<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity"
    android:background="@color/bgPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="310dp"

                android:background="@drawable/bg_gradient_primary_blu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/mlight"
                android:lineSpacingExtra="9dp"
                android:text="We highly suggest you to \nuse the correct informations"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/mregular"
                android:text="Edit Profile"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view2"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="343dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_layout_white"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="105dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="24dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="@font/mlight"
                            android:text="@string/name_label"
                            android:textColor="@color/grayPrimary"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/tv_nama_lengkap"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_input"
                            android:fontFamily="@font/mmedium"
                            android:lines="1"
                            android:paddingLeft="12dp"
                            android:textColor="@color/blackPrimary" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="24dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="@font/mlight"
                            android:text="@string/bio_label"
                            android:textColor="@color/grayPrimary"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/tv_bio"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_input"
                            android:fontFamily="@font/mmedium"
                            android:lines="1"
                            android:paddingLeft="12dp"
                            android:textColor="@color/blackPrimary" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="24dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="@font/mlight"
                            android:text="@string/username_label"
                            android:textColor="@color/grayPrimary"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/tv_username"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_input"
                            android:fontFamily="@font/mmedium"
                            android:lines="1"
                            android:paddingLeft="12dp"
                            android:textColor="@color/blackPrimary" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="24dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="@font/mlight"
                            android:text="@string/password_label"
                            android:textColor="@color/grayPrimary"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/tv_password"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_input"
                            android:fontFamily="@font/mmedium"
                            android:lines="1"

                            android:paddingLeft="12dp"
                            android:textColor="@color/blackPrimary" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="24dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="@font/mlight"
                            android:text="@string/email_label"
                            android:textColor="@color/grayPrimary"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/tv_email"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_input"
                            android:fontFamily="@font/mmedium"
                            android:lines="1"
                            android:paddingLeft="12dp"
                            android:textColor="@color/blackPrimary" />
                    </LinearLayout>






                </LinearLayout>


            </LinearLayout>

            <View
                android:id="@+id/view3"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:background="@drawable/bg_view_circle_picture"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <com.github.florent37.shapeofview.shapes.CircleView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="211dp"
                tools:ignore="MissingConstraints"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view2"
                >

                <ImageView
                    android:id="@+id/pic_photo_edit_profile"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/icon_nopic"
                    />


            </com.github.florent37.shapeofview.shapes.CircleView>

            <Button
                android:id="@+id/btn_add_new_photo"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/bg_btn_plus_blue"
                android:fontFamily="@font/mmedium"
                android:text="+"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="8sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.581"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayout"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="238dp"
                android:layout_height="55dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_btn_blue_primary"
                android:fontFamily="@font/mmedium"
                android:text="Save Profile"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <LinearLayout
                android:id="@+id/btn_back"
                android:layout_width="90dp"
                android:layout_height="55dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="#fff"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/btn_continue"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_back" />



            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>